Resolve defect #698778 to vertically align input text for IE8

--- a/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
+++ b/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
@@ -301,3 +301,4 @@ body.checkout-onepage-index #checkoutSteps div[id$="-progress-opcheckout"] {
 .name-lastname { clear: both; }
 .form-list li.control { clear: both; margin-left: 20px; }
 .opc select { max-width: 100% !important; }
+.ie8 input { line-height: 42px; }
